# SceneGraphRendering

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/DisplayShadowTest/: main.cpp
Examples/ModelViewer/: main.cpp
Examples/TextureRender/: CMakeLists.txt  main.cpp
Examples/TextureRender/utils/: map_object_label2training_label.h
cmake_modules/: FindASSIMP.cmake
data/bedroom1_data/: bedroom1_trajectory.txt
include/SceneGraph/: GLMesh.h  GLText.h
src/: GLMesh.cpp
